v<0.1.0>, <05/29/2022> -- Initial release.
v<0.1.1>, <05/30/2022> -- README.rst update, addition of all.py, bug fix to shift.py.
v<0.1.2>, <05/30/2022> -- Fix to README.rst.
v<0.1.3>, <05/31/2022> -- README.rst typo.
v<0.1.4>, <05/31/2022> -- Fix to README.rst image.
v<0.1.5>, <06/04/2022> -- Added references README.rst, Fixed chau.py, changed parameter default name from None to 'native' for gesd.py and hist.py.
v<0.1.6>, <06/09/2022> -- Replaced numpy random functions with scipy random due to random state for dsn.py, mcst.py, and wind.py
v<0.1.7>, <06/10/2022> -- Fixed missing scipy.stats import in wind.py, description update to README.rst
v<0.1.8>, <06/16/2022> -- Replaced gf.py with filter.py, added karch.py, updated all.py, clf.py, dsn.py, wind.py as well as README.rst and all the jupyter notebooks 
v<0.1.9>, <06/16/2022> -- chau.py syntax error bug fix
v<0.2.0>, <06/19/2022> -- Updated dsn.py, new cdf calc
v<0.2.0>, <06/21/2022> -- Updated fgd.py, dsn.py fix 
v<0.2.1>, <06/25/2022> -- Documentation and updated docstrings
v<0.2.2>, <06/25/2022> -- Documentation, and general bug fixes with moving all functions into classes
v<0.2.3>, <07/02/2022> -- Updated references, documentation, and version control. General bug fixes
v<0.2.4>, <07/09/2022> -- Added ocsvm thresholder, fixed all tests and examples, updated documentation
v<0.2.5>, <08/04/2022> -- Added clust thresholders, Python 3.10 intergration, CodeCov, and minor changes to thresholders
v<0.2.5>, <09/03/2022> -- Added decomp thresholder, additional description notes in docstrings
v<0.2.6>, <09/08/2022> -- Added majority vote to ALL, depreciated kmeans and shift thresholders
v<0.2.6>, <09/11/2022> -- Add INT metric, fix sort bug for DSN
v<0.2.6>, <09/29/2022> -- Added meta thresholder, updated requirements
v<0.2.6>, <10/01/2022> -- Updated trained meta-models, added confidence threshold attribute
v<0.2.7>, <10/02/2022> -- Removed kmeans and shift thresholders