@@ -248,7 +248,7 @@ pythresh.thresholds.vae module
 
 .. automodule:: pythresh.thresholds.vae
     :members:
-    :exclude-members: _train, VAE_model, data_encoder, data_decoder, forward, predict, reconstructed_probability
+    :exclude-members: _autodim, _train, VAE_model, data_encoder, data_decoder, forward, predict, reconstructed_probability, compute_kernel, compute_mmd
     :undoc-members:
     :show-inheritance:
     :inherited-members:
