@@ -37,26 +37,29 @@ class TestVAE(unittest.TestCase):
         self.clf.fit(self.X_train)
 
         self.scores = self.clf.decision_scores_
-        self.latent_dims = [1,2,3,5,10]
-        self.epochs = [50,100,120]
+        self.loss = ['kl', 'mmd']
+        self.latent_dims = [1,2,3,5,'auto']
+        self.epochs = [5,10,15]
         self.batch_size = [16,32,64]
         
 
     def test_prediction_labels(self):
 
         for epochs in self.epochs:
-            for latent_dims in self.latent_dims:
-                for batch_size in self.batch_size:
+            for loss in self.loss:
+                for latent_dims in self.latent_dims:
+                    for batch_size in self.batch_size:
+                        
+                        self.thres = VAE(epochs=epochs,
+                                        latent_dims=latent_dims,
+                                        batch_size=batch_size,
+                                        loss=loss)
+                        
+                        pred_labels = self.thres.eval(self.scores)
+                        assert (self.thres.thresh_ != None)
                     
-                    self.thres = VAE(epochs=epochs,
-                                     latent_dims=latent_dims,
-                                     batch_size=batch_size)
-                    
-                    pred_labels = self.thres.eval(self.scores)
-                    assert (self.thres.thresh_ != None)
-                
-                    assert_equal(pred_labels.shape, self.y_train.shape)
+                        assert_equal(pred_labels.shape, self.y_train.shape)
 
-                    assert (pred_labels.min() == 0)
-                    assert (pred_labels.max() == 1)
+                        assert (pred_labels.min() == 0)
+                        assert (pred_labels.max() == 1)
 
