@@ -1,5 +1,6 @@
 import numpy as np
 from tqdm import tqdm
+import scipy.stats as stats
 from sklearn.utils import check_array
 import torch
 from torch import nn
@@ -15,7 +16,7 @@ class VAE(BaseThresholder):
 
        Use a VAE to evaluate a non-parametric means
        to threshold scores generated by the decision_scores where outliers
-       are set to any value the maximum minus the minimum of the
+       are set to any value beyond the maximum minus the minimum of the
        reconstructed distribution probabilities after encoding.
        See :cite:`xiao2020vae` for details
        
@@ -28,8 +29,10 @@ class VAE(BaseThresholder):
        device : str, optional (default='cpu')
             device for pytorch
             
-       latent_dims : int, optional (default=3)
-            number of latent dimensions the encoder will map the scores to
+       latent_dims : int, optional (default='auto')
+            number of latent dimensions the encoder will map the scores to.
+            Default 'auto' applies automatic dimensionality selection using
+            a profile likelihood.
             
        random_state : int, optional (default=1234)
             random seed for the normal distribution. Can also be set to None
@@ -39,6 +42,12 @@ class VAE(BaseThresholder):
             
        batch_size : int, optional (default=64)
             batch size for the dataloader during training
+            
+       loss : str, optional (default='kl')
+            Loss function during training
+            
+            - 'kl' : use the combined negative log likelihood and Kullback-Leibler divergence
+            - 'mmd': use the combined negative log likelihood and maximum mean discrepancy
 
        Attributes
        ----------
@@ -47,14 +56,15 @@ class VAE(BaseThresholder):
 
     """
 
-    def __init__(self, verbose=False, device='cpu', latent_dims=3,
-                 random_state=1234, epochs=100, batch_size=64):
+    def __init__(self, verbose=False, device='cpu', latent_dims='auto',
+                 random_state=1234, epochs=100, batch_size=64, loss='kl'):
 
         self.verbose = verbose
         self.device = device
         self.latent_dims = latent_dims
         self.dist = Normal
         self.epochs = epochs
+        self.loss = loss
         self.batch_size = batch_size
         self.random_state = random_state
         if random_state:
@@ -79,11 +89,15 @@ class VAE(BaseThresholder):
 
         decision = check_array(decision, ensure_2d=False)
         scores = normalize(decision.copy())
+        
+        if self.latent_dims=='auto':
+            self.latent_dims = self._autodim(scores)
 
         decision = normalize(decision).astype(np.float32).reshape(-1,1)
 
         self.model = VAE_model(1, self.latent_dims,
-                          self.random_state, self.dist).to(self.device)
+                          self.random_state, self.dist,
+                          self.loss).to(self.device)
 
         self.data = torch.utils.data.DataLoader(
                             torch.from_numpy(decision),
@@ -99,6 +113,26 @@ class VAE(BaseThresholder):
         self.thresh_ = limit
         
         return cut(scores, limit)
+    
+    def _autodim(self, vals):
+        ''' Estimate the dimension using the method of Zhu and Ghodsi (2006) '''
+        
+        vals = np.sort(vals)[::-1]
+        m = len(vals)
+        profile_lik = []
+        
+        for i in range(1,m+1):
+            
+            mu1 = np.mean(vals[:i])
+            mu2 = np.mean(vals[i:])
+            sigma = np.sqrt((np.sum((vals[:i] - mu1) ** 2) +
+                             np.sum((vals[i:] - mu2) ** 2)) / (m-2))
+            
+            profile_lik += [np.sum(stats.norm.logpdf(vals[:i], loc=mu1, scale=sigma)) +
+                            np.sum(stats.norm.logpdf(vals[i:], loc=mu2, scale=sigma))]
+
+        dims = round(np.log(np.argsort(profile_lik)[-1]))
+        return dims
 
     def _train(self):
 
@@ -124,7 +158,8 @@ class VAE(BaseThresholder):
 
 class VAE_model(nn.Module):
     
-    def __init__(self, input_size, latent_size, random_state, dist, L=16):
+    def __init__(self, input_size, latent_size, 
+                 random_state, dist, loss, L=16):
 
         super().__init__()
         self.L = L
@@ -133,6 +168,7 @@ class VAE_model(nn.Module):
         self.encoder = self.data_encoder(input_size, latent_size)
         self.decoder = self.data_decoder(latent_size, input_size)
         self.dist = dist
+        self.loss = loss
         
         if random_state:
             torch.manual_seed(random_state)
@@ -171,10 +207,27 @@ class VAE_model(nn.Module):
         log_lik = log_lik.mean(dim=0).sum()
 
         # calculate the kl divergence and the forward loss
-        kl = kl_divergence(pred_result['latent_dist'],
-                           self.prior).mean(dim=0).sum()
-        loss = kl - log_lik
+        if self.loss=='kl':
+            kl = kl_divergence(pred_result['latent_dist'],
+                            self.prior).mean(dim=0).sum()
+            loss = kl - log_lik
         
+        # calculate the mmd and the forward loss    
+        else:
+            
+            x = x.squeeze()
+            batch_size = len(x)
+            
+            z = pred_result['latent_dist'].rsample([self.L])
+            z = z.view(self.L * batch_size, self.latent_size)
+            
+            x = self.prior.rsample([self.L*len(x) * self.latent_size])
+            x = x.view(self.L * batch_size, self.latent_size)
+            
+            mmd = self.compute_mmd(z, x)
+
+            loss = mmd - log_lik
+            
         return dict(loss=loss, kl=kl, recon_loss=log_lik, **pred_result)
 
     def predict(self, x):
@@ -207,6 +260,31 @@ class VAE_model(nn.Module):
         x = x.unsqueeze(0)
         p = recon_dist.log_prob(x).exp().mean(dim=0).mean(dim=-1)
         
-        return p
+        return 
+    
+    def compute_kernel(self, x, y):
+
+        x_size = x.shape[0]
+        y_size = y.shape[0]
+        dim = x.shape[1]
+        
+        x = x.view(x_size, 1, dim)
+        y = y.view(1, y_size, dim)
+        tx = x.expand(x_size, y_size, dim)
+        ty = y.expand(x_size, y_size, dim)
+        
+        kernel_input = (tx - ty).pow(2).mean(2)/float(dim)
+        
+        return torch.exp(-kernel_input)
+
+    def compute_mmd(self, x, y):
+        
+        x_kernel = self.compute_kernel(x, x)
+        y_kernel = self.compute_kernel(y, y)
+        xy_kernel = self.compute_kernel(x, y)
+        
+        mmd = x_kernel.mean() + y_kernel.mean() - 2*xy_kernel.mean()
+        
+        return mmd
 
 
